# src/api/hello/$api.ts
@@ -3,18 +3,18 @@ import type { Methods as Methods0 } from '.'
 
 const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
   const prefix = (baseURL === undefined ? 'http://localhost:3000/api/v1' : baseURL).replace(/\/$/, '')
-  const PATH0 = '/user/whoami'
+  const PATH0 = '/hello'
   const GET = 'GET'
 
   return {
     /**
-     * ログインしているユーザーの情報を取得します。
+     * Hello, World!を返します。
      * @returns OK
      */
     get: (option?: { config?: T | undefined } | undefined) =>
       fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json(),
     /**
-     * ログインしているユーザーの情報を取得します。
+     * Hello, World!を返します。
      * @returns OK
      */
     $get: (option?: { config?: T | undefined } | undefined) =>
